--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.2.3",
     "react-router-dom": "^6.22.3",
     "@google/genai": "^1.34.0",
+    "@vercel/kv": "^1.0.0",
     "lucide-react": "^0.562.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.0",
