--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
   "rewrites": [
     {
+      "source": "/api/express/:path*",
+      "destination": "/api/index.ts"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/index.ts": {
+      "maxDuration": 60
+    }
+  }
 }
