--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^6.22.3",
     "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.39.0",
-    "lucide-react": "^0.562.0",
-    "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.0",
-    "mammoth": "1.8.0",
+    "framer-motion": "^11.0.0",
     "html2canvas": "1.4.1",
+    "html2pdf.js": "^0.14.0",
     "jspdf": "2.5.1",
-    "xlsx": "0.18.5",
-    "framer-motion": "^11.0.0"
+    "lucide-react": "^0.562.0",
+    "mammoth": "1.8.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.22.3",
+    "remark-gfm": "^4.0.0",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@types/node": "^22.14.0",
     "@vercel/node": "^3.0.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
